# ray-tracer

./: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Constvals.cpp  Constvals.h  Environment.h  Geometry.h  GeometryPropertiesImpl.cpp  GridLinearizer.cpp  GridLinearizer.h  Intersection.cpp  Intersection.h  Light.h  Material.cpp  Material.h  Matrices.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Projectile.cpp  Projectile.h  ProjectileRenderer.cpp  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Transformations.cpp  Transformations.h  Tuple.h  TupleF.cpp  Vector.cpp  Vector.h  Vector_t.h  World.cpp  World.h  (+1 more)
src/01_ProjectileRenderer/: Projectile.cpp  Projectile.h
src/04_Clock/: CMakeLists.txt  Clock.cpp
src/05_Sphere/: CMakeLists.txt  Sphere.cpp
src/07_Scene/: CMakeLists.txt  Scene.cpp
src/09_Scene_with_plane/: CMakeLists.txt  Scene.cpp
src/Clock/: Clock.cpp
src/ProjectileRenderer/: CMakeLists.txt  ProjectileRenderer.cpp
tests/: CMakeLists.txt  CameraTests.cpp  CanvasTests.cpp  ColorTests.cpp  IntersectionTests.cpp  LightTests.cpp  MaterialTests.cpp  MatricesTests.cpp  PlaneTests.cpp  RayTests.cpp  SphereTests.cpp  TransformationsTests.cpp  TupleTests.cpp  WorldTests.cpp
